examples/errors/redecleration_of_arg.alan
main(): proc
    foo(x: int): proc
        x: int;
    {
    }
{}